# financoor

./: .env.example  .gitignore  Cargo.toml  DEMO.md  Dockerfile  docker-compose.yml
apps/web/: next.config.ts  package-lock.json  package.json  vercel.json
apps/web/src/app/: client-providers.tsx  globals.css  layout.tsx  page.tsx  providers.tsx
apps/web/src/app/app/: page.tsx
apps/web/src/app/club/: page.tsx
apps/web/src/app/club/[domain]/: page.tsx
apps/web/src/app/demo/: page.tsx
apps/web/src/app/verify/: page.tsx
apps/web/src/components/: ledger-table.tsx  pricing-panel.tsx  session-manager.tsx  tax-panel.tsx
apps/web/src/components/ui/: card-3d.tsx  encrypted-text.tsx  file-upload.tsx  floating-dock.tsx  gradient-text.tsx  sparkles.tsx  text-generate-effect.tsx
apps/web/src/components/wizard/: groups-step.tsx  index.ts  user-type-step.tsx  wallets-step.tsx  wizard.tsx
apps/web/src/lib/: api.ts  contracts.ts  ens-contracts.ts  wagmi.ts
apps/web/src/lib/session/: context.tsx  index.ts  types.ts
contracts/: foundry.toml
contracts/script/: Deploy.s.sol  DeployTaxVerifier.s.sol
contracts/src/: DemoToken.sol  ISP1Verifier.sol  LossMachine.sol  MockSP1Verifier.sol  ProfitMachine.sol  TaxVerifier.sol  YieldFarm.sol
crates/api/: Cargo.toml
crates/api/src/: alchemy.rs  ens.rs  main.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/prover/: Cargo.toml  build.rs
crates/prover/src/: lib.rs
deploy/: README.md  aws-setup.sh  deploy-ec2.sh  financoor-api.service
deploy/terraform/: .terraform.lock.hcl  README.md  main.tf  outputs.tf  terraform.tfvars.example  user-data.sh  variables.tf
programs/tax_zk/: Cargo.toml
programs/tax_zk/src/: main.rs
