[workspace]
resolver = "2"
members = ["crates/*", "programs/*"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.42", features = ["full"] }

# Web framework
axum = "0.8"
tower-http = { version = "0.6", features = ["cors"] }

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Date/time
chrono = "0.4"

# Cryptography & Ethereum
alloy-sol-types = "0.8"

# SP1 zkVM
sp1-sdk = "4.0"
sp1-zkvm = "4.0"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Environment
dotenvy = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
