[package]
name = "financoor-prover"
version.workspace = true
edition.workspace = true

[dependencies]
financoor-core = { path = "../core" }
sp1-sdk = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
base64 = "0.22"
hex = "0.4"

[build-dependencies]
sp1-build = "4.2"

[[bin]]
name = "test_prove"
path = "src/bin/test_prove.rs"
